syntax = "proto3";
package data_source;

import "google/protobuf/empty.proto";
import "util/config/config.proto";
import "util/error/error.proto";
import "util/version/version.proto";

// DataSourceSyncConfig represents the configuration that is passed from the CLI to the DataAccessSyncer plugin interface.
// It contains all the necessary configuration parameters for the plugin to function.
message DataSourceSyncConfig {
  util.config.ConfigMap config_map = 1;
  string target_file = 2;
  string data_source_id = 3;
}

// DataSourceSyncResult represents the result from the data source sync process.
// A potential error is also modeled in here so specific errors remain intact when passed over RPC.
message DataSourceSyncResult {
  util.error.ErrorResult error = 1 [deprecated = true];
  int32 data_objects = 2;
}

//NoLinting ToSupport GQL schema (temporarily)
message MetaData {
  repeated DataObjectType dataObjectTypes = 1;
  repeated string supportedFeatures = 2;
  string type = 3;
  string icon = 4;
  UsageMetaInput usageMetaInfo = 5;
  repeated AccessProviderType accessProviderTypes = 6;
}

message DataObjectType {
  string name = 1;
  string type = 2;
  string label = 3;
  string icon = 4;
  repeated DataObjectTypePermission permissions = 5;
  repeated DataObjectTypeAction actions = 6;
  repeated string children = 7;
}

message AccessProviderType {
  string type = 1;
  string label = 2;
  string icon = 3;
  bool isNamedEntity = 4;
  bool canBeCreated = 5;
  bool canBeAssumed = 6;
  bool canAssumeMultiple = 7;
  bool containsWhat = 8;
  bool containsWho = 9;
  repeated string whoInputTypes = 10;
  string identityStoreTypeForWho = 11;
}

//NoLinting ToSupport GQL schema (temporarily)
message DataObjectTypePermission {
  string permission = 1;
  repeated string globalPermissions = 2;
  string description = 3;
  repeated string action = 4;
  repeated string usageGlobalPermissions = 5;
  bool cannotBeGranted = 6;
}

//NoLinting ToSupport GQL schema (temporarily)
message DataObjectTypeAction {
  string action = 1;
  repeated string globalActions = 2;
}

message UsageMetaInput {
  string defaultLevel = 1;
  repeated UsageMetaInputDetail levels = 2;
}

message UsageMetaInputDetail {
  string name = 1;
  repeated string dataObjectTypes = 2;
}

service DataSourceSyncService {
  rpc CliVersionInformation(google.protobuf.Empty) returns (util.version.CliBuildInformation);

  rpc SyncDataSource(DataSourceSyncConfig) returns (DataSourceSyncResult);
  rpc GetDataSourceMetaData(google.protobuf.Empty) returns (MetaData);
}
